--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,25 @@
 .appBody {
   display: flex;
   align-items: center;
-  height: 90vh;
+  height: calc(100vh - 50px);
 }
 
 .cList {
   height: 80vh;
   overflow-y: scroll;
   border: 1px solid gray;
+}
+
+.cList::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+.cList::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: blue;
+  height: 100px;
 }
 
 .myCard {
@@ -17,6 +29,9 @@
   flex-direction: column;
   align-items: center;
   min-width: 380px;
+  max-width: 380px;
+  flex-wrap: wrap;
+  text-align: center;
 }
 
 .myCard p {
@@ -38,3 +53,4 @@
 .bordersM {
   margin-right: 10px;
 }
+
